Edit function and Spring Security added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb
+
 spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mariadb://LOCALHOST:3306/MOODDATABASE
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.initialization-mode=always
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
